--- a/master_survey/templates/master_survey/index.html
+++ b/master_survey/templates/master_survey/index.html
@@ -46,7 +46,7 @@
               <ul class="nav nav-tabs nav-bordered mb-3">
                     <li class="nav-item">
                         <a href="#survey-preview" data-bs-toggle="tab" aria-expanded="false" class="nav-link active">
-                            Preview
+                            Data Survei
                         </a>
                     </li>
                     <li class="nav-item">
@@ -66,13 +66,14 @@
                     <div class="tab-pane show active" id="survey-preview">
                         <div class="row mb-2">
                             <div class="col-sm-6">
-                                <a href="#offcanvasFilter"  data-bs-toggle="offcanvas" role="button" aria-controls="offcanvasFilter" class="btn btn-danger mb-2"><i class="mdi mdi-filter-menu me-2"></i> Filter Data</a>
+                                <a href="#offcanvasFilter"  data-bs-toggle="offcanvas" role="button" aria-controls="offcanvasFilter" class="btn btn-primary mb-2"><i class="mdi mdi-filter-menu me-2"></i> Filter Data</a>
+                                <button type="button" class="btn btn-primary mb-2 me-1" id="redraw-table"><i class="mdi mdi-refresh"></i> Refresh</button>
                             </div>
                             <div class="col-sm-6">
                                 <div class="text-sm-end">
-                                    <button type="button" class="btn btn-success mb-2 me-1" id="redraw-table"><i class="mdi mdi-refresh"></i></button>
-                                    <button type="button" class="btn btn-light mb-2 me-1" data-bs-toggle="modal" data-bs-target="#import-modal">Import</button>
-                                    <a href="{% url 'master_survei:export-survey' %}" class="btn btn-light mb-2">Export</a>
+                                    <button type="button" class="btn btn-primary mb-2 me-1" data-bs-toggle="modal" data-bs-target="#import-modal"><i class="mdi mdi-file-move"></i> Import</button>
+                                    <a href="{% url 'master_survei:export-survey' %}" class="btn btn-primary mb-2"><i class="mdi mdi-download"></i> Export</a>
+                                
                                 </div>
                             </div><!-- end col-->
                         </div>
@@ -80,6 +81,7 @@
                             <table id="basic-datatable" class="table table-centered table-striped w-100 dt-responsive nowrap">
                                 <thead>
                                     <tr>
+                                        <th>No</th>
                                         <th>Nama Survei</th>
                                         <th>Periode Survei</th>
                                         <th>Deskripsi</th>
@@ -228,7 +230,6 @@
     </div>
 </div>
 
-
 <div id="import-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="compose-header-modalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -242,7 +243,6 @@
                     <div class="mb-3">
                         <ol>
                             <li>Unduh template: <br>
-                                
                                 <div class="mt-1">
                                     <input type="number" class="form-control  form-control-sm d-inline" style="width:150px;" placeholder="Jumlah baris data" alt="Masukan jumlah data" id="number_rows">   
                                     <button class="btn btn-primary btn-sm d-inline" id="get-templates-upload">Unduh</button>
@@ -271,23 +271,6 @@
 </div><!-- /.modal -->
     
 
-<!-- Success Alert Modal -->
-<div id="success-alert-modal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog modal-sm">
-        <div class="modal-content modal-filled bg-success">
-            <div class="modal-body p-4">
-                <div class="text-center">
-                    <i class="dripicons-checkmark h1"></i>
-                    <h4 class="mt-2">Well Done!</h4>
-                    <p class="mt-3 message-feedback"></p>
-                    <button type="button" class="btn btn-light my-2" data-bs-dismiss="modal">Continue</button>
-                </div>
-            </div>
-        </div><!-- /.modal-content -->
-    </div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
-
-
 {% endblock table-content %}
 
 {% block tables-script-extend %}
@@ -314,6 +297,7 @@
         },
         columns :[
             {"data": 'nama'},
+            {"data": 'nama'},
             {"data" : 'tgl_mulai'},
             {"data":  'deskripsi'},
             {"data":  'state'},
@@ -321,8 +305,16 @@
         ],
         lengthMenu: [5, 25, 50, 100,'All'],
         columnDefs: [ {
-            'targets': [4], /* column index */
+            'targets': [5], /* column index */
             'orderable': false, /* true or false */
+        },
+        {
+            "targets": 0,
+            "data": null,
+            "defaultContent": "",
+            "render": function (data, type, row, meta) {
+                return meta.row + 1;
+            }
         }],
         keys: !0,
         language: {
@@ -330,6 +322,8 @@
             previous: "<i class='mdi mdi-chevron-left'>",
             next: "<i class='mdi mdi-chevron-right'>",
             },
+            lengthMenu : "Menampilkan_MENU_",
+            search: "Cari Survei",
         },
         drawCallback: function () {
             $(".dataTables_paginate > .pagination").addClass("pagination-rounded");
@@ -525,9 +519,8 @@
     })
 
     $('#get-templates-upload').on('click', function(){
-
         var numrows = $('#number_rows').val()
-        return window.location.replace("http://127.0.0.1:8000/master-survei/template/" + numrows);
+        return window.location.replace("{% url 'master_survei:template-survey' %}?rows=" + numrows);
     })
     
     $('#{{form_upload.import_file.id_for_label}}').on('change', function(){
