--- a/master_petugas/templates/master_petugas/alokasi_peran.html
+++ b/master_petugas/templates/master_petugas/alokasi_peran.html
@@ -295,12 +295,15 @@
         $('#form_id_petugas_id').removeClass('d-none')
         $('#form_id_pegawai_id').addClass('d-none')
         $('#id_pegawai_id').val('')
+        $('#input-mitra').addClass('active')
+        
     }
-
+    
     let input_pegawai_tab = () => {
         $('#form_id_petugas_id').addClass('d-none')
         $('#id_petugas_id').val('')
         $('#form_id_pegawai_id').removeClass('d-none')
+        $('#input-pegawai').addClass('active')
     }
     
     var table = $("#basic-datatable").DataTable({
@@ -378,7 +381,6 @@
                 "X-CSRFToken": '{{csrf_token}}',
             },
             success: (data) => {
-
                 if (data.status == 'failed'){
                     Swal.fire(
                         'Terjadi Kesalahan!',
@@ -390,12 +392,16 @@
                         $('#id_'+key).val(value)
                     }
 
+                    $('.nav-tabs a[href="#input-tab"]').tab('show');
+                    $('.nav-link').each(function(i, obj) {
+                        $(obj).removeClass('active')
+                    });
                     if (state === 1){
                         input_mitra_tab()
                     }else{
                         input_pegawai_tab()
                     }
-                    $('.nav-tabs a[href="#input-tab"]').tab('show');
+
                     table.ajax.reload();
                 }
             },
