--- a/templates/base/detached-layout/base.html
+++ b/templates/base/detached-layout/base.html
@@ -181,12 +181,6 @@
                                 <span> Master Mitra </span>
                             </a>
                         </li>
-                        <li class="side-nav-item">
-                            <a href="{% url 'master_petugas:role' %}" aria-expanded="false"  class="side-nav-link">
-                                <i class="mdi mdi-sitemap"></i>
-                                <span> Role Mitra </span>
-                            </a>
-                        </li>
    
                         <li class="side-nav-title side-nav-item mt-2">Manajemen Organik</li>
 
@@ -222,6 +216,12 @@
                             <a href="{% url 'master_survei:kegiatan-survey' %}" class="side-nav-link">
                                 <i class="mdi mdi-clipboard-account"></i>
                                 <span> Kegiatan Survei </span>
+                            </a>
+                        </li>
+                        <li class="side-nav-item">
+                            <a href="{% url 'master_petugas:role' %}" aria-expanded="false"  class="side-nav-link">
+                                <i class="mdi mdi-sitemap"></i>
+                                <span> Role Kegiatan </span>
                             </a>
                         </li>
                         <li class="side-nav-item">
