--- a/master_penilaian/templates/master_penilaian/nilai-mitra.html
+++ b/master_penilaian/templates/master_penilaian/nilai-mitra.html
@@ -54,7 +54,7 @@
 
                     <li class="nav-item">
                         <a href="#input-tab" data-bs-toggle="tab" aria-expanded="true" class="nav-link">
-                            Input
+                            Input Penilaian
                         </a>
                     </li>
 
@@ -104,7 +104,7 @@
                 
                       <div class="tab-pane" id="nilai-mitra-preview-2">
                         <div class="row mb-2">
-                            <div class="col-sm-8 d-flex justify-content-start">
+                            <div class="col-sm-8 d-flex justify-content-start align-items-center">
                                 <a href="#offcanvasFilter2"  data-bs-toggle="offcanvas" role="button" aria-controls="offcanvasFilter2" class="btn btn-primary mb-2 d-inline"><i class="mdi mdi-filter-menu me-2"></i> Filter Data</a>&emsp;
                                 <select class="form-select mb-2 d-inline" id="nilai-mitra-filter-survey" style="width:200px">
                                     <option value="">-- Pilih Survei --</option>
@@ -223,7 +223,7 @@
                             <div class="row mt-4">
                                 <div class="col-md">        
                                     <button type="submit" class="btn btn-primary" id="submitformPenilaianPetugas">Kirim Data</button>
-                                    <button type="button" class="btn btn-info" id="ResetformPenilaianPetugas">Reset Form</button>
+                                    <button type="button" class="btn btn-outline-primary" id="ResetformPenilaianPetugas">Reset Form</button>
                                 </div>
                             </div>
                         
@@ -232,7 +232,6 @@
 
                       <div class="tab-pane" id="import-tab">
                         <h5>Preview File Upload</h5>
-
                         <div class="table-responsive">
                             <table id="preview-data-upload" class="table table-sm table-hover w-100 dt-responsive nowrap">
                                 <thead>
